feat: implement the plugin settings ui in the deck
